--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "add-whatsapp-button",
-  "version": "2.0.1",
+  "version": "2.0.5",
   "description": "Add Chat App Button enables adding a customizeable click-to-chat WhatsApp button.\r The plugin lets you choose between a simple WhatsApp icon and a rectangle with a custom text label.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/udidol/add-whatsapp-button.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/udidol/add-whatsapp-button/issues"
-  },
-  "homepage": "https://github.com/udidol/add-whatsapp-button#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^9.1.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
   }
